scrollbar fixes

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,10 @@
   
 }
 
+::-webkit-scrollbar{
+  width:0px;
+  background:transparent;
+}
 
 
 html,
